[Fixed] some padding and margin alignments

--- a/www/css/my-app.css
+++ b/www/css/my-app.css
@@ -170,11 +170,12 @@ div ul li a {
 }
 
 .tab-page-container {
-    margin: 20px 20px;
+    padding: 0px 20px;
+    margin: 20px 0px;
 }
 
 .swiper-container {
-    height: 100%;
+    /* height: 100%; */
 }
 
 .slide-title {
